testsuite/tests/rep-poly/RepPolyRule1.stderr

RepPolyRule1.hs:11:49: error:
    • The argument ‘x’ of ‘f’
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE rep
    • In the expression: f x
      When checking the rewrite rule "f_id"
